edit drill memory page based on changes to product